; ModuleID = '/home/carl/AnghaBench/redis/src/extr_pubsub.c_pubsubUnsubscribePattern.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_pubsub.c_pubsubUnsubscribePattern.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { i32 }
%struct.TYPE_13__ = type { i32 }
%struct.TYPE_12__ = type { %struct.TYPE_12__*, %struct.TYPE_13__* }

@server = common dso_local global %struct.TYPE_14__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pubsubUnsubscribePattern(%struct.TYPE_13__* %0, %struct.TYPE_12__* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_12__, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %4, align 8
  store %struct.TYPE_12__* %1, %struct.TYPE_12__** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %9, align 4
  %10 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %11 = call i32 @incrRefCount(%struct.TYPE_12__* %10)
  %12 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %16 = call i32* @listSearchKey(i32 %14, %struct.TYPE_12__* %15)
  store i32* %16, i32** %7, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %33

18:                                               ; preds = %3
  store i32 1, i32* %9, align 4
  %19 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @listDelNode(i32 %21, i32* %22)
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 1
  store %struct.TYPE_13__* %24, %struct.TYPE_13__** %25, align 8
  %26 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 0
  store %struct.TYPE_12__* %26, %struct.TYPE_12__** %27, align 8
  %28 = load i32, i32* getelementptr inbounds (%struct.TYPE_14__, %struct.TYPE_14__* @server, i32 0, i32 0), align 4
  %29 = call i32* @listSearchKey(i32 %28, %struct.TYPE_12__* %8)
  store i32* %29, i32** %7, align 8
  %30 = load i32, i32* getelementptr inbounds (%struct.TYPE_14__, %struct.TYPE_14__* @server, i32 0, i32 0), align 4
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @listDelNode(i32 %30, i32* %31)
  br label %33

33:                                               ; preds = %18, %3
  %34 = load i32, i32* %6, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %33
  %37 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %39 = call i32 @addReplyPubsubPatUnsubscribed(%struct.TYPE_13__* %37, %struct.TYPE_12__* %38)
  br label %40

40:                                               ; preds = %36, %33
  %41 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %42 = call i32 @decrRefCount(%struct.TYPE_12__* %41)
  %43 = load i32, i32* %9, align 4
  ret i32 %43
}

declare dso_local i32 @incrRefCount(%struct.TYPE_12__*) #1

declare dso_local i32* @listSearchKey(i32, %struct.TYPE_12__*) #1

declare dso_local i32 @listDelNode(i32, i32*) #1

declare dso_local i32 @addReplyPubsubPatUnsubscribed(%struct.TYPE_13__*, %struct.TYPE_12__*) #1

declare dso_local i32 @decrRefCount(%struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
